sumo/tests/netconvert/errors/false_output/options.netconvert
--xml-edge-files=%SUMO_DIST%\tests\netconvert\errors\false_output\hokkaido.edg.xml --xml-node-files=%SUMO_DIST%\tests\netconvert\errors\false_output\hokkaido.nod.xml --output-file=output/net.net.xml
